# mcp-scanner-gui

./: .gitignore  HEDWIG-BUILD-INSTRUCTIONS.md  HEDWIG-DEV-SETUP.md  LICENSE  README.md
.github/workflows/: build-release.yml
backend/: main.py  mcp_scanner.py  requirements.txt
backend/gui_scanner/: __init__.py  discovery.py
backend/scanner/: __init__.py  checks.py  models.py  reporter.py  sarif_export.py  siem_export.py  v2_checks.py
backend/tests/: test_v2_checks.py
scripts/: build-all.sh  build-sidecar.ps1  build-sidecar.py
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
